test/libsolidity/syntaxTests/inheritance/final_modifier/final_contract_inheritance.sol
contract Base final {}
contract Derived is Base {}
// ----
// TypeError: (43-47): Final contracts cannot be inherited from.
